[gd_scene load_steps=7 format=2]

[ext_resource path="res://BombPuzzle.gd" type="Script" id=1]
[ext_resource path="res://Art/gridHighlight.png" type="Texture" id=2]
[ext_resource path="res://Art/background.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="BombPuzzle" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Grid" type="Node2D" parent="."]
position = Vector2( 16, 16 )

[node name="LevelData" type="Node2D" parent="Grid"]

[node name="GridHighlight" type="AnimatedSprite" parent="Grid"]
frames = SubResource( 3 )
centered = false

[node name="DebugOutput" type="Label" parent="."]
margin_left = 13.0
margin_top = 2.0
margin_right = 90.0
margin_bottom = 16.0
text = "IDLE"

[node name="LevelSlot" type="Label" parent="."]
margin_left = 25.0
margin_top = 120.0
margin_right = 65.0
margin_bottom = 134.0
text = "-"
